<resources>
    <string name="app_name">IX_Front</string>

    <string name="loading_title">努力加载中</string>

    <string name="login_tips">输入手机号</string>

    <string name="next">下一步</string>
    <string name="write_telephone">请输入手机号码</string>

    <string name="write_password">请输入登录密码</string>
    <string name="telephone">手机号为**</string>
    <string name="password_hint">6-18位字母、数字组合</string>
    <string name="login">登录</string>
    
    <string name="number_letter">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>
