<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include
        android:id="@+id/password_top"
        layout="@layout/head_layout"></include>

    <TextView
        android:id="@+id/password_text_write_password"
        android:layout_below="@id/password_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="76px"
        android:layout_marginLeft="50px"
        android:textSize="40px"
        android:text="@string/write_password"
        android:textColor="@color/text_default"/>

    <TextView
        android:id="@+id/password_text_write_telephone"
        android:layout_below="@id/password_text_write_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23px"
        android:layout_marginLeft="50px"
        android:textSize="34px"
        android:text="@string/telephone"
        android:textColorHint="@color/edit_hint_color"/>

    <com.crf.ix.widget.view.ClearEditText
        android:id="@+id/password_edit_password"
        android:layout_below="@id/password_text_write_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="106px"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        android:background="@null"
        android:textSize="34px"
        android:lines="1"
        android:maxLength="18"
        android:inputType="textPassword"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:hint="@string/password_hint"/>

    <View
        android:id="@+id/password_view_line"
        android:layout_below="@id/password_edit_password"
        android:layout_marginTop="23px"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        style="@style/Line">
    </View>
    
    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/password_rl"
        android:layout_below="@+id/password_view_line"
        android:layout_marginTop="26px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/password_text_code_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50px"
            android:layout_alignParentLeft="true"
            android:textSize="28px"
            android:text="验证码登录"/>

        <TextView
            android:id="@+id/password_text_forget_password"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50px"
            android:textSize="28px"
            android:text="忘记密码"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <Button
        android:id="@+id/password_btn_login"
        android:layout_below="@+id/password_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50px"
        android:layout_marginRight="50px"
        android:layout_marginTop="140px"
        android:background="@drawable/shape_button"
        android:textColor="@color/white"
        android:textSize="34px"
        android:text="@string/login"/>

</com.zhy.autolayout.AutoRelativeLayout>
